fix: close unclosed HTML tags in settings template
- Removed extra </header> tag in TitleDB section
- Added missing closing tags for main structure (settingsContent, column is-9, columns, container, section)
- Fixed div count from 214/217 to 217/217 balanced

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -625,15 +625,10 @@
                                         <i class="bi bi-check-lg mr-1"></i> {{ t('Save') }}
                                     </button>
                                 </div>
-                                </header>
-
                             </div>
-
-
-
                         </div>
-                </div>
-</section>
+                    </div>
+                </section>
 
 <!-- Shop Section -->
 <section id="section-Shop" class="settings-section is-hidden">
@@ -1100,11 +1095,14 @@
         </div>
     </div>
 </section>
-</div>
-</div>
-</div>
-</div>
+
+<!-- Close main structure -->
+            </div>
+        </div>
+    </div>
 </section>
+
+{% endblock %}
 
 <!-- Modals -->
 <div class="modal" id="deleteUserModal">
